--- a/server/public/styles/navbar.css
+++ b/server/public/styles/navbar.css
@@ -1,8 +1,8 @@
 .navbar {
     position: sticky;
     top: 0;
-    z-index: 1;
-    background: rgba(84, 138, 234, 0.5);
+    z-index: 2;
+    background: rgba(129, 166, 231, 0.9);
     font-size: 1.5rem;
     display: flex;
     flex-flow: row wrap;
